feat(scanner): implement multi-language scanner with TypeScript and Markdown support
- Add scanner type definitions and interfaces
- Implement TypeScriptScanner using ts-morph for deep AST analysis
- Implement MarkdownScanner using remark for documentation
- Create ScannerRegistry for managing multiple language scanners
- Add comprehensive tests (all passing)
- Fix pre-commit hook to use correct Biome syntax

Features:
- TypeScript: extracts functions, classes, methods, interfaces with type info
- Markdown: extracts documentation sections with headings
- Pluggable architecture: easy to add more language scanners
- Tested on dev-agent codebase itself

Issue: #3

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,13 @@ out
 # TypeScript
 *.tsbuildinfo
 
+# Build artifacts in src (should only be in dist/)
+packages/*/src/**/*.js
+packages/*/src/**/*.d.ts
+packages/*/src/**/*.map
+!packages/*/src/**/*.test.js
+!packages/*/src/**/*.spec.js
+
 # Testing
 coverage
 
