--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,6 +22,16 @@
     "test:watch": "vitest"
   },
   "devDependencies": {
+    "@types/mdast": "^4.0.4",
+    "@types/node": "^24.10.1",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "globby": "^16.0.0",
+    "remark": "^15.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-stringify": "^11.0.0",
+    "ts-morph": "^27.0.2",
+    "unified": "^11.0.5"
   }
 }
