--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@lytics/dev-agent",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "workspaces": [
     "packages/*"
   ],
