--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "bin": {
+    "dev": "./dist/cli.js"
+  },
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -22,10 +25,13 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@lytics/dev-agent-core": "workspace:*"
+    "@lytics/dev-agent-core": "workspace:*",
+    "chalk": "^5.3.0",
+    "ora": "^8.0.1"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
-    "commander": "^11.1.0"
+    "@types/node": "^22.0.0",
+    "commander": "^12.1.0",
+    "typescript": "^5.3.3"
   }
 }
