--- a/packages/subagents/package.json
+++ b/packages/subagents/package.json
@@ -25,6 +25,7 @@
     "@lytics/dev-agent-core": "workspace:*"
   },
   "devDependencies": {
+    "@types/node": "^22.0.0",
     "typescript": "^5.3.3"
   }
 }
