docs: enshrine testability as core development practice
Add comprehensive documentation and tooling to make testability
the default way of working:

Documentation:
- TESTABILITY.md: Complete guide with principles, examples, checklists
- FEATURE_TEMPLATE.md: Step-by-step template for new features
- Updated CONTRIBUTING.md with testability section
- PR template with testability checklist

Key principles enshrined:
1. Extract pure functions to utils/ modules
2. 100% coverage on utilities
3. No non-null assertions (!)
4. Organize by domain, not "misc"
5. Atomic commits with clear dependencies

Coverage targets:
- Pure utilities: 100%
- Integration: >80%
- CLI/UI: >60%

Scripts:
- Added test:coverage command for easy coverage checks

Real examples referenced:
- Explorer subagent (99 tests, 100% utils coverage)
- Repository indexer (87 tests, 100% utils coverage)

This establishes testability as a first-class concern and provides
clear guidance for all future development.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "turbo lint",
     "test": "vitest run",
     "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "clean": "turbo clean && rm -rf node_modules",
     "format": "turbo format",
     "typecheck": "turbo typecheck",
