feat(cli): add plan command for GitHub issue analysis
Implements `dev plan <issue>` CLI command:

**Usage:**
```bash
dev plan 123                    # Generate plan
dev plan 123 --json            # JSON output
dev plan 123 --markdown        # Markdown output
dev plan 123 --simple          # High-level (4-8 tasks)
dev plan 123 --no-explorer     # Skip code search
```

**Features:**
- Fetches GitHub issue via gh CLI
- Parses acceptance criteria and requirements
- Breaks down into actionable tasks
- Optionally finds relevant code with Explorer
- Estimates effort per task
- Outputs pretty, JSON, or markdown format

**Exports:**
- Added all Planner utilities to subagents package exports
- CLI imports utilities directly from @lytics/dev-agent-subagents

**Output formats:**
- Pretty: Colorful terminal output with emojis
- JSON: Machine-readable for tool integration
- Markdown: Copy-paste to issue comments

Ready for testing ✅

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@lytics/dev-agent-core": "workspace:*",
+    "@lytics/dev-agent-subagents": "workspace:*",
     "chalk": "^5.3.0",
     "ora": "^8.0.1"
   },
