fix(mcp-server): fix Cursor integration and protocol compatibility
- Echo back client's protocol version (MCP uses date-based versioning like '2025-06-18')
- Add handling for 'initialized' notification to prevent premature connection closure
- Enable debug logging to aid troubleshooting
- Fix logger to write all messages to stderr (not stdout) to avoid JSON-RPC interference
- Remove readline output config to prevent echoing to stdout
- Add CLI entry point (dev-agent-mcp.ts) for starting the MCP server

This fixes the issue where Cursor would immediately close the MCP server connection
due to protocol version mismatch and improper stdout usage. The server now successfully
connects to Cursor and the dev_search tool is fully functional.

--- a/packages/mcp-server/package.json
+++ b/packages/mcp-server/package.json
@@ -6,7 +6,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "bin": {
-    "dev-agent-mcp": "./dist/index.js"
+    "dev-agent-mcp": "./dist/bin/dev-agent-mcp.js"
   },
   "scripts": {
     "build": "tsc",
