feat(logger): create @lytics/kero zero-dependency logger
- Core logger with trace/debug/info/warn/error/fatal levels
- Pino-inspired API with structured logging
- Child loggers with context inheritance
- Pretty formatter (colored, human-readable)
- JSON formatter (machine-readable, Pino-compatible)
- Console transport (stdout/stderr routing)
- Presets for development/production/test
- Timer utility for measuring durations
- success() method for success messages with checkmark icon
- Configurable icons: unicode (» ○ ● ✔ ▲ ✖ ✘) or emoji
- 62 tests with 100% line coverage

Closes #46

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,9 @@
       "@lytics/dev-agent-cli": ["packages/cli/src"],
       "@lytics/dev-agent-cli/*": ["packages/cli/src/*"],
       "@lytics/dev-agent-integrations": ["packages/integrations/src"],
-      "@lytics/dev-agent-integrations/*": ["packages/integrations/src/*"]
+      "@lytics/dev-agent-integrations/*": ["packages/integrations/src/*"],
+      "@lytics/kero": ["packages/logger/src"],
+      "@lytics/kero/*": ["packages/logger/src/*"]
     }
   },
   "exclude": ["node_modules"],
