refactor: integrate @lytics/kero logger and reorganize tests
- Integrate @lytics/kero logger across all packages (cli, core, mcp-server, subagents)
- Replace console.log/winston with kero's structured logging
- Move subagents tests to __tests__ directories for consistency
- Fix all test files to spy on process.stdout/stderr.write for kero output
- Fix pre-existing TypeScript errors in test files
- Update tsconfig to include test files and node types
- All 954 tests now passing across 49 test files

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -3,8 +3,10 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
-    "composite": true
+    "composite": true,
+    "types": ["node", "vitest/globals"]
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts"]
+  "exclude": ["node_modules", "dist"],
+  "references": [{ "path": "../logger" }]
 }
