--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -27,11 +27,12 @@
   "dependencies": {
     "@lytics/dev-agent-core": "workspace:*",
     "@lytics/dev-agent-subagents": "workspace:*",
-    "chalk": "^5.3.0",
+    "@lytics/kero": "workspace:*",
     "ora": "^8.0.1"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
+    "chalk": "^5.6.2",
     "commander": "^12.1.0",
     "typescript": "^5.3.3"
   }
