--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -3,12 +3,10 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
-    "composite": true
+    "composite": true,
+    "types": ["node", "vitest/globals"]
   },
-  "references": [
-    { "path": "../core" },
-    { "path": "../subagents" }
-  ],
+  "references": [{ "path": "../core" }, { "path": "../subagents" }, { "path": "../logger" }],
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts"]
+  "exclude": ["node_modules", "dist"]
 }
