--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@lancedb/lancedb": "^0.22.3",
+    "@lytics/kero": "workspace:*",
     "@xenova/transformers": "^2.17.2",
     "globby": "^16.0.0",
     "remark": "^15.0.1",
