--- a/packages/integrations/tsconfig.json
+++ b/packages/integrations/tsconfig.json
@@ -5,11 +5,7 @@
     "rootDir": "./src",
     "composite": true
   },
-  "references": [
-    { "path": "../core" },
-    { "path": "../cli" },
-    { "path": "../subagents" }
-  ],
+  "references": [{ "path": "../core" }, { "path": "../cli" }, { "path": "../subagents" }],
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
