feat(mcp): implement streamlined Claude Code integration
- Add comprehensive MCP command suite (start, install, uninstall, list)
- Fix resources/list protocol error preventing Claude Code connection
- Enable full feature set with all 5 adapters and coordinator
- Add streamlined user workflow: npm install -g dev-agent -> dev index . -> dev mcp install
- Update CLAUDE.md with complete integration documentation
- Improve storage migration with interactive confirmation prompt

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@lytics/dev-agent-core": "workspace:*",
+    "@lytics/dev-agent-mcp": "workspace:*",
     "@lytics/dev-agent-subagents": "workspace:*",
     "@lytics/kero": "workspace:*",
     "ora": "^8.0.1"
