--- a/packages/mcp-server/package.json
+++ b/packages/mcp-server/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "description": "MCP server for dev-agent with extensible adapter framework",
   "private": true,
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/src/index.js",
+  "types": "./dist/src/index.d.ts",
   "bin": {
     "dev-agent-mcp": "./dist/bin/dev-agent-mcp.js"
   },
