fix(publish): exclude test files from published package
Added 'files' field to all workspace packages to exclude test files
from the published npm package.

Changes:
- Added files filter to: cli, core, subagents, logger
- Excludes: *.test.js, *.test.d.ts, *.test.*.map, __tests__/
- MCP server already had files field

Impact on Package Size:
- Before: 647KB, 926 files (included all test files)
- After: 275KB, 481 files (test files excluded)
- Reduction: 57% smaller, 48% fewer files

Verification:
- ✅ No test files in tarball
- ✅ dev --version works
- ✅ dev --help works
- ✅ All runtime code included

Why This Matters:
- Faster npm install for users
- Smaller download size
- Cleaner package contents
- Professional packaging (tests aren't needed by users)

Package is now production-ready for npm publishing.

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -12,8 +12,21 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.js"
+    },
+    "./cli": {
+      "types": "./dist/cli.d.ts",
+      "import": "./dist/cli.js",
+      "require": "./dist/cli.js"
     }
   },
+  "files": [
+    "dist",
+    "!dist/**/*.test.js",
+    "!dist/**/*.test.d.ts",
+    "!dist/**/*.test.d.ts.map",
+    "!dist/**/*.test.js.map",
+    "!dist/**/__tests__"
+  ],
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
