fix(mcp): include all 9 adapters and improve tool descriptions
- CLI mcp start now registers all 9 adapters (was missing 4)
- Improved tool descriptions for better AI tool adoption
- dev_search: USE THIS FIRST, better than grep
- dev_map: shows component counts, better than list_dir
- dev_explore: use after dev_search for similar/relationships
- dev_refs: for specific symbols, use dev_search for concepts
- dev_history: understand WHY code looks the way it does
- dev_plan: ALL context in one call for GitHub issues
- dev_gh: semantic search by meaning, not keywords
- Ignore benchmark package (WIP)

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,6 @@ Thumbs.db
 # Temporary files and invalid paths
 temp/
 *-github/*.tgz
+
+# Work in progress packages (not ready for commit)
+packages/benchmark/
