feat(core): add Go language scanner with tree-sitter
Implements issue #129: Go scanner using tree-sitter WASM for parsing.

- Add web-tree-sitter and tree-sitter-wasms dependencies
- Add tree-sitter utility module (reusable for future languages)
- Implement GoScanner with query-based extraction
- Extract: functions, methods, structs, interfaces, types, constants
- Skip generated files (// Code generated)
- 30 tests with Go fixtures

Closes #129

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -42,7 +42,9 @@
     "remark": "^15.0.1",
     "remark-parse": "^11.0.0",
     "remark-stringify": "^11.0.0",
+    "tree-sitter-wasms": "^0.1.13",
     "ts-morph": "^27.0.2",
-    "unified": "^11.0.5"
+    "unified": "^11.0.5",
+    "web-tree-sitter": "^0.25.10"
   }
 }
