feat(cli): add enhanced statistics display with rich formatting
Enhance the `dev stats` command with formatted tables, colors, and
detailed breakdowns. Add `dev dashboard` as an alias command.

Features:
- Language breakdown table with files, components, LOC
- Component type counts with percentages
- Color-coded health indicators (green/yellow/red)
- Package-level stats for monorepos
- Terminal-aware formatting with cli-table3
- Maintained --json flag for programmatic access

New utilities:
- formatters.ts: Table creation and formatting functions
- dashboard.ts: Alias command for enhanced stats display

Dependencies added: cli-table3, terminal-size

Tests: 19 formatter tests (all passing)

Resolves #147

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -43,8 +43,10 @@
     "@lytics/dev-agent-subagents": "workspace:*",
     "@lytics/kero": "workspace:*",
     "chalk": "^5.6.2",
+    "cli-table3": "^0.6.5",
     "commander": "^12.1.0",
-    "ora": "^8.0.1"
+    "ora": "^8.0.1",
+    "terminal-size": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
