feat(mcp): add Zod validation to MCP adapters (5/9 complete)
- Install Zod for runtime type validation (following TypeScript Standards Rule #2)
- Create comprehensive schemas for all 9 adapters (247 lines, 33 tests)
- Create validation utilities with Result type pattern (68 lines)
- Migrate 5 adapters to Zod validation (eliminates ~150 lines of manual checks)

Migrated adapters:
- HealthAdapter: 2 lines validation → type-safe
- StatusAdapter: 24 lines validation → type-safe
- RefsAdapter: 32 lines validation → type-safe
- SearchAdapter: 58 lines validation → type-safe
- MapAdapter: 34 lines validation → type-safe

Benefits:
- Zero type assertions (no more 'as unknown as')
- Automatic TypeScript type inference from schemas
- Better error messages with field paths
- Schemas are pure functions (100% test coverage)
- Cleaner adapter tests (focus on logic, not validation)

Remaining: HistoryAdapter, PlanAdapter, ExploreAdapter, GitHubAdapter

All tests passing, build successful

--- a/packages/mcp-server/package.json
+++ b/packages/mcp-server/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "@lytics/dev-agent-core": "workspace:*",
     "@lytics/dev-agent-subagents": "workspace:*",
-    "@lytics/kero": "workspace:*"
+    "@lytics/kero": "workspace:*",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
