--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,9 +30,9 @@
     "test:watch": "vitest"
   },
   "devDependencies": {
-    "tree-sitter-wasms": "^0.1.13",
     "@types/mdast": "^4.0.4",
     "@types/node": "^24.10.1",
+    "tree-sitter-wasms": "^0.1.13",
     "typescript": "^5.3.3"
   },
   "dependencies": {
@@ -45,6 +45,7 @@
     "remark-stringify": "^11.0.0",
     "ts-morph": "^27.0.2",
     "unified": "^11.0.5",
-    "web-tree-sitter": "^0.25.10"
+    "web-tree-sitter": "^0.25.10",
+    "zod": "^4.1.13"
   }
 }
