--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,6 +30,7 @@
     "test:watch": "vitest"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/mdast": "^4.0.4",
     "@types/node": "^24.10.1",
     "tree-sitter-wasms": "^0.1.13",
@@ -39,6 +40,7 @@
     "@lancedb/lancedb": "^0.22.3",
     "@lytics/kero": "workspace:*",
     "@xenova/transformers": "^2.17.2",
+    "better-sqlite3": "^12.5.0",
     "globby": "^16.0.0",
     "remark": "^15.0.1",
     "remark-parse": "^11.0.0",
