refactor(services): resolve circular deps with shared types package
- Create @lytics/dev-agent-types for GitHub types
- Refactor GitHubService to use dependency injection
- Update all adapters and tests to use new service patterns
- Fix tsconfigs to exclude tests from dist builds
- Clean stale build artifacts
- Define GitHubIndexerInstance interface for type safety
- Fix findRelated to return GitHubSearchResult[] with real scores
- Add comprehensive tests for related action

Changes:
- GitHubService.findRelated() returns GitHubSearchResult[] (not GitHubDocument[])
- All mocks properly typed as GitHubIndexerInstance
- Added adapter tests for 'related' action with score validation
- Fixed search method to pass options directly

Tests: All 1927 passing
Build: All 9 packages clean
Lint: All clean

Net: -141 lines

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -4,6 +4,8 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "composite": true,
+    "declaration": true,
+    "declarationMap": true,
     "types": ["node", "vitest/globals"]
   },
   "references": [
@@ -13,5 +15,11 @@
     { "path": "../logger" }
   ],
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "**/*.test.ts",
+    "**/*.spec.ts",
+    "**/__tests__/**"
+  ]
 }
