--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@lancedb/lancedb": "^0.22.3",
+    "@lytics/dev-agent-types": "workspace:*",
     "@lytics/kero": "workspace:*",
     "@xenova/transformers": "^2.17.2",
     "better-sqlite3": "^12.5.0",
