--- a/packages/subagents/package.json
+++ b/packages/subagents/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@lytics/dev-agent-core": "workspace:*",
+    "@lytics/dev-agent-types": "workspace:*",
     "@lytics/kero": "workspace:*",
     "zod": "^4.1.13"
   },
