--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -45,6 +45,7 @@
     "chalk": "^5.6.2",
     "cli-table3": "^0.6.5",
     "commander": "^12.1.0",
+    "log-update": "^6.1.0",
     "ora": "^8.0.1",
     "terminal-size": "^4.0.0"
   },
