feat(mcp): add PatternAnalysisService and wire to dev_inspect
- Created PatternAnalysisService in @lytics/dev-agent-core
  - 5 core patterns: file size, testing, imports, error handling, types
  - Pattern comparison against similar files
  - 31/31 tests passing with comprehensive fixtures

- Integrated PatternAnalysisService into InspectAdapter
  - Removed action parameter (single-purpose tool)
  - Added patternsAnalyzed field to output schema
  - Real pattern analysis in compact & verbose formats
  - 18/18 tests passing with dedicated fixtures

- Clean architecture
  - Barrel exports for types
  - Fixtures excluded from compilation, linting, and type-checking
  - Separate fixture sets for unit (core) and integration (adapter) tests

Test coverage:
- PatternAnalysisService: 31 tests ✅
- InspectAdapter: 18 tests ✅
- Build: successful ✅

--- a/biome.json
+++ b/biome.json
@@ -26,6 +26,12 @@
           }
         }
       }
+    },
+    {
+      "includes": ["**/__fixtures__/**"],
+      "linter": {
+        "enabled": false
+      }
     }
   ],
   "formatter": {
