--- a/packages/mcp-server/tsconfig.json
+++ b/packages/mcp-server/tsconfig.json
@@ -13,7 +13,8 @@
     "dist",
     "**/*.test.ts",
     "**/*.spec.ts",
-    "**/__tests__/**"
+    "**/__tests__/**",
+    "**/__fixtures__/**"
   ],
   "references": [{ "path": "../core" }, { "path": "../subagents" }, { "path": "../logger" }]
 }
