docs: add v0.8.5 release notes and update changeset
- Add v0.8.5 changelog entry to website
- Update latest-version.ts with new release info
- Update tools index with v0.8.5 marker
- Update changeset to use patch bumps for all packages
- Fix all v0.9.0 references to v0.8.5
- Document pattern analysis features and performance improvements

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -15,11 +15,5 @@
     { "path": "../logger" }
   ],
   "include": ["src/**/*"],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "**/*.test.ts",
-    "**/*.spec.ts",
-    "**/__tests__/**"
-  ]
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts", "**/__tests__/**"]
 }
