--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -17,8 +17,5 @@
     "**/__tests__/**",
     "**/__fixtures__/**"
   ],
-  "references": [
-    { "path": "../logger" },
-    { "path": "../types" }
-  ]
+  "references": [{ "path": "../logger" }, { "path": "../types" }]
 }
